<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:key="@string/multiplayer_option_key"
        android:summaryOn="@string/choose_single_player"
        android:summaryOff="@string/choose_multiplayer">
    </CheckBoxPreference>

    <ListPreference
        android:title="@string/choose_board_size_text"
        android:key="@string/board_size_key"
        android:defaultValue="4"
        android:entries="@array/boardSizeDescription"
        android:entryValues="@array/boardSizeValues"
        android:summary="%s"/>

    <ListPreference
        android:title="@string/choose_game_duration"
        android:key="@string/game_duration_key"
        android:defaultValue="30"
        android:entries="@array/gameDurationDescription"
        android:entryValues="@array/gameDurationValues"
        android:summary="%s"/>


</PreferenceScreen>