<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerVertical="true"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.gonczor.tictactoe.MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:contentDescription="@string/image_name"
        android:src="@drawable/ttt"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/play_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/rounded_button"
        android:text="@string/play_button_label"
        android:textSize="@dimen/button_text_size"
        android:onClick="onClickPlay"/>

    <Button
        android:id="@+id/settings_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/rounded_button"
        android:layout_marginTop="@dimen/activity_vertical_margin"

        android:text="@string/settings_button_label"
        android:textSize="@dimen/button_text_size"
        android:onClick="onClickShowSettings"/>

</LinearLayout>
